clenup makefiles and move tool building (including java) to docker